<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="#201E28"

    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/reg_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register_page"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_login"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_your_login_name" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColorHint="#6a6a6a"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_your_email" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:textColorHint="#6a6a6a"
        android:textColor="#fdfdfd"
        android:hint="@string/enter_your_password" />

    <Button
        android:id="@+id/button_reg"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:backgroundTint="#e2a600"
        android:textSize="16sp"
        android:textColor="#5e4602"
        android:textStyle="bold"
        android:text="@string/register_btn" />

    <TextView
        android:id="@+id/link_to_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter"
        android:text="@string/go_to_login_page"
        android:textColor="#fdfdfd"
        android:textSize="17sp"
        android:textStyle="bold" />
</LinearLayout>