<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#201E28"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <TextView
        android:id="@+id/log_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login_page"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_email_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a" />

    <EditText
        android:id="@+id/user_password_auth"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:textColor="#fdfdfd"
        android:textColorHint="#6a6a6a" />

    <Button
        android:id="@+id/button_log"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#e2a600"
        android:text="@string/login_btn"
        android:textColor="#5e4602"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/link_to_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/inter"
        android:text="@string/go_to_register_page"
        android:textColor="#fdfdfd"
        android:textSize="17sp"
        android:textStyle="bold" />
</LinearLayout>