<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2a600"
    android:orientation="vertical"
    tools:context=".ui.ItemActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BD8D06"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="#fdfdfd"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cart_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/cart"
            android:focusable="true"
            android:paddingVertical="5dp"
            android:src="@drawable/ic_cart" />

        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="@string/logout"
            android:focusable="true"
            android:paddingVertical="5dp"

            android:src="@drawable/ic_logout" />
    </LinearLayout>

    <ImageView
        android:id="@+id/item_page_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/product_photo"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/item_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text=""
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_page_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text=""
        android:textSize="17sp" />

    <TextView
        android:id="@+id/item_page_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.stripe.android.view.CardInputWidget
        android:id="@+id/cardInputWidget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/card_input_background"
        android:hint="@string/card_details"
        android:padding="12dp"
        android:textColor="#333333"
        android:textColorHint="#9E9E9E" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="5dp">

        <Button
            android:id="@+id/button_buy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:backgroundTint="#A8431B"
            android:text="@string/buy"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_add_to_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#A8431B"
            android:text="@string/add_to_cart"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_back_to_list"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:backgroundTint="#8C6D1F"
        android:text="@string/back_to_list"
        android:textSize="16sp" />
</LinearLayout>