<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e2a600"
    android:orientation="vertical"
    tools:context=".ui.ItemsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BD8D06"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textColor="#fdfdfd"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cart_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:contentDescription="@string/cart"
            android:focusable="true"
            android:paddingVertical="5dp"
            android:src="@drawable/ic_cart" />

        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="@string/logout"
            android:focusable="true"
            android:paddingVertical="5dp"
            android:src="@drawable/ic_logout" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/list_of_products"
        android:textColor="#fdfdfd"
        android:textSize="25sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="30dp" />

</LinearLayout>